--- a/_posts/2021-02-12-2dengine.md
+++ b/_posts/2021-02-12-2dengine.md
@@ -6,6 +6,7 @@ position: left
 
 title: '2D Game Engine'
 year: '2021'
+time: ''
 description: '2D Game Engine I have started doing in my free time, it is still work in progress but my main goal is to have a fast and efficient game engine and a good UI/UX.'
 
 featured_image: '/img/project/2D_Engine.png'
