--- a/_posts/2021-02-12-davos.md
+++ b/_posts/2021-02-12-davos.md
@@ -6,6 +6,7 @@ position: left
 
 title: 'Davos 3D Game Engine'
 year: '2020'
+time: ''
 description: '3D Game Engine and UI subsystem, made with C++, OpenGL and other libraries in a group of 2.'
 
 featured_image: '/img/project/Davos.png'
