posts data + images

--- a/_posts/2021-02-12-davos.md
+++ b/_posts/2021-02-12-davos.md
@@ -9,7 +9,7 @@ year: '2020'
 time: ''
 description: '3D Game Engine and UI subsystem, made with C++, OpenGL and other libraries in a group of 2.'
 
-featured_image: '/img/project/Davos.png'
+featured_image: '/img/project/davos.gif'
 
 website_url: 'https://ponspack9.github.io/GameEngine/'
 github_url: 'https://github.com/DavidTello1/GameEngine'
