--- a/_posts/2021-02-12-s-team.md
+++ b/_posts/2021-02-12-s-team.md
@@ -7,9 +7,9 @@ position: left
 title: 'S-Team'
 year: '2021'
 time: '34h'
-description: '3D Puzzle game where the player must swap between five women, each one with huge knowledge on one field of STEAM (Science, Technology, Engineering, Art and Mathematics). In order to solve the puzzles and complete the game, you will have to combine their skills.'
+description: '3D Puzzle game made for the Grand CITM GameJam with the theme women in STEAM jobs, our team won the Best Technology Prize to the game with the best technical quality'
 
-featured_image: '/img/project/S-Team.png'
+featured_image: '/img/gamejam/s-team.gif'
 
 website_url: 'https://martekings.itch.io/s-team'
 github_url: 'https://github.com/DavidTello1/GameJam_S-Team'
