--- a/_posts/2021-02-12-s-team.md
+++ b/_posts/2021-02-12-s-team.md
@@ -9,7 +9,7 @@ year: '2021'
 time: '34h'
 description: '3D Puzzle game made for the Grand CITM GameJam with the theme women in STEAM jobs, our team won the Best Technology Prize to the game with the best technical quality'
 
-featured_image: '/img/gamejam/s-team.gif'
+featured_image: '/Website/img/gamejam/s-team.gif'
 
 website_url: 'https://martekings.itch.io/s-team'
 github_url: 'https://github.com/DavidTello1/GameJam_S-Team'
