--- a/_posts/2021-02-12-2dengine.md
+++ b/_posts/2021-02-12-2dengine.md
@@ -9,7 +9,7 @@ year: '2021'
 time: ''
 description: '2D Game Engine I have started doing in my free time, it is still work in progress but my main goal is to have a fast and efficient game engine and a good UI/UX.'
 
-featured_image: '/Website/img/project/2dengine.png'
+featured_image: '/img/project/2dengine.png'
 
 website_url: ''
 github_url: 'https://github.com/DavidTello1/Motor2D'
