--- a/_posts/2021-02-12-s-team.md
+++ b/_posts/2021-02-12-s-team.md
@@ -7,7 +7,7 @@ position: left
 title: 'S-Team'
 year: '2021'
 time: '34h'
-description: '3D Puzzle game made for the Grand CITM GameJam with the theme women in STEAM jobs, our team won the Best Technology Prize to the game with the best technical quality'
+description: '3D Puzzle game made for the Grand CITM GameJam with the theme women in STEAM jobs, our team won the Best Technology Prize to the game with the best technical quality.'
 
 featured_image: '/Website/img/gamejam/s-team.gif'
 
